--- a/Rop.Winforms9.DuotoneIcons/Rop.Winforms9.DuotoneIcons.csproj
+++ b/Rop.Winforms9.DuotoneIcons/Rop.Winforms9.DuotoneIcons.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
     <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -8,7 +8,7 @@
 	<PackageTags>helper-classes;winform;icons;two-tone;duotone</PackageTags>
 	<Description>DuoTone Icon classes for Winforms</Description>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>1.2.0</Version>
+	<Version>1.2.1</Version>
 	<Authors>Ramon Ordiales Plaza</Authors>
 	<Company>Ramon Ordiales Plaza</Company>
 	<Copyright>2024 Ramon Ordiales</Copyright>
