Añadidas propiedades y eventos en ColumnListBox y SwitchIcon
En `ColumnListBox.HeaderProxy.cs`:
* Modificada la propiedad `BankIcon` para invalidar el encabezado.
* Añadida la propiedad `HeaderBorderRaised`.
* Añadida la propiedad `HeaderBackColor` con un campo privado `_headerBackColor`.

En `ColumnListBox.ListBoxProxy.cs`:
* Añadidas varias referencias de `using`.
* Modificada la declaración del espacio de nombres.

En `ColumnListBox`:
* Añadidos eventos y métodos: `SelectedIndexChanged`, `ItemClick`, `ItemColumnsClick`, `DrawItem`, `SetItems`, `ItemBackgroundColor`, `ItemBackgroundColorAlt`, `SelectedItem`, `GetItemColumnIndex`, `OnDrawItem`, `OnSelectedIndexChanged`, `OnItemClick`, `OnMouseOver`, `GetColumnBounds`, `BeginUpdate`, y `EndUpdate`.
* Añadida la clase `ItemClickEventArgs`.
* Modificada la clase `ItemColumnClickEventArgs`.
* Añadido el evento `MouseOver` y un `ToolTip`.
* Añadido el manejo de eventos `MouseMove` y `MouseLeave` para `ListBox`.
* Añadida la clase `DrawItemEventArgsEx`.
* Modificada la clase `DrawColumnsEventArgs` para usar `DrawItemEventArgsEx`.

En `Rop.Winforms9.ColumnsListBox.csproj`:
* Actualizada la versión del proyecto.
* Actualizada la referencia del paquete `Rop.Winforms9.ListComboBox`.

En `SortItemsArg.cs`:
* Añadida la clase `MouseOverArgs`.

En `Rop.Winforms9.DuotoneIcons.GoogleMaterial.csproj` y `Rop.Winforms9.DuotoneIcons.MaterialDesign.csproj`:
* Actualizada la versión del proyecto.

En `ColumnDefinition.cs`:
* Añadida la propiedad `Filterable`.
* Actualizado el constructor y el método `ToString` para incluir `Filterable`.
* Modificado el método `Parse` para manejar `Filterable`.
* Actualizado el método `GetHashCode` para incluir `Filterable`.

En `ColumnDefinitionConverter.cs`:
* Actualizado el constructor de `InstanceDescriptor` y el método `CreateInstance` para incluir `Filterable`.
* Añadida la propiedad `Filterable` en el método `GetProperties`.

En `IconBoolLabel.cs`:
* Cambiada la visibilidad de la propiedad `Value

--- a/Rop.Winforms9.ColumnsListBox/Rop.Winforms9.ColumnsListBox.csproj
+++ b/Rop.Winforms9.ColumnsListBox/Rop.Winforms9.ColumnsListBox.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0-windows</TargetFramework>
@@ -9,7 +9,7 @@
 	  <PackageTags>helper-classes;winform;listbox;grid</PackageTags>
 	  <Description>ColumnsListBox</Description>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Version>1.2.0</Version>
+	  <Version>1.2.8</Version>
 	  <Authors>Ramon Ordiales Plaza</Authors>
 	  <Company>Ramon Ordiales Plaza</Company>
 	  <Copyright>2024 Ramon Ordiales</Copyright>
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Rop.Winforms9.ListComboBox" Version="1.0.1" />
+    <PackageReference Include="Rop.Winforms9.ListComboBox" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
