Implementación de gestión avanzada de columnas
Se ha añadido una referencia al espacio de nombres `Rop.Winforms9.ColumnsListBox` en `Form1.Designer.cs` y `Form1.cs`. Se han modificado las definiciones de columnas en `columnListBox1` y se ha cambiado el método para añadir elementos a `columnListBox1`. Se ha añadido un nuevo evento `ColumnFilterClick` y se ha actualizado el método `columnListBox1_SortItems` para incluir filtrado activo.

Se ha refactorizado la clase `ColumnListBox` y se han añadido nuevos eventos y métodos, incluyendo `ShowFilterDialog`. Se ha actualizado la clase `DrawColumnsEventArgs` y se ha renombrado `MouseOverArgs` a `MouseCellOverArgs`. Se ha añadido una referencia al paquete `Rop.Winforms9.Helper`.

Se han eliminado las clases `ColumnPanelMd`, `ColumnDefinition` y `ColumnDefinitionConverter`. Se ha actualizado la versión del proyecto.

Se han añadido nuevas declaraciones de `using` y se ha creado una nueva clase `ColumnDefinition` que implementa varias interfaces. Se ha añadido una nueva clase `ColumnDefinitionConverter` y un archivo `ColumnListBox.Mouse.cs`.

Se ha creado un nuevo espacio de nombres `Rop.Winforms9.ColumnsListBox` y se ha añadido la clase `ColumnPanel` con varias propiedades y métodos para gestionar columnas. Se han añadido eventos y lógica para manejar la interacción del usuario y la disposición de las columnas.

Se ha añadido un nuevo archivo `ColumnPanelFilterBox.cs` con una clase `ColumnPanelFilterBox` que hereda de `Form`, incluyendo lógica para manejar la selección de elementos y eventos de botones.

--- a/Rop.Winforms9.DuotoneIcons/Rop.Winforms9.DuotoneIcons.csproj
+++ b/Rop.Winforms9.DuotoneIcons/Rop.Winforms9.DuotoneIcons.csproj
@@ -28,5 +28,7 @@
 		<PackageReference Include="Rop.Winforms9.FontsEx" Version="1.0.2" />
 
 		<PackageReference Include="Rop.Winforms9.GraphicsEx" Version="1.0.4" />
+
+		<PackageReference Include="Rop.Winforms9.Helper" Version="1.0.8" />
 	</ItemGroup>
 </Project>
