--- a/Rop.Winforms9.ColumnsListBox/Rop.Winforms9.ColumnsListBox.csproj
+++ b/Rop.Winforms9.ColumnsListBox/Rop.Winforms9.ColumnsListBox.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0-windows</TargetFramework>
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Rop.Winforms9.Helper" Version="1.0.9" />
     <PackageReference Include="Rop.Winforms9.ListComboBox" Version="1.0.3" />
   </ItemGroup>
 
