--- a/Rop.Winforms9.ColumnsListBox/Rop.Winforms9.ColumnsListBox.csproj
+++ b/Rop.Winforms9.ColumnsListBox/Rop.Winforms9.ColumnsListBox.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0-windows</TargetFramework>
@@ -9,7 +9,7 @@
 	  <PackageTags>helper-classes;winform;listbox;grid</PackageTags>
 	  <Description>ColumnsListBox</Description>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Version>1.2.16</Version>
+	  <Version>1.2.17</Version>
 	  <Authors>Ramon Ordiales Plaza</Authors>
 	  <Company>Ramon Ordiales Plaza</Company>
 	  <Copyright>2024 Ramon Ordiales</Copyright>
